--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = externalDependencies/qualisys_cpp_sdk
 	url = https://github.com/qualisys/qualisys_cpp_sdk.git
 	shallow = true
+[submodule "externalDependencies/pybind11"]
+	path = externalDependencies/pybind11
+	url = https://github.com/pybind/pybind11.git
