--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
     
     - name: Build source distribution
       run: |
-        sudo apt-get install -y ninja-build
+        sudo apt-get install -y libpcl-dev ninja-build
         pip3 install wheel
         pip3 wheel dist/*.tar.gz
 
