--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -63,33 +63,33 @@ jobs:
         name: linux-build
         path: "dist/*.whl"
   
-  # MacOS:
-  #   runs-on: macos-10.15
-  #   needs: Source
+  MacOS:
+    runs-on: macos-10.15
+    needs: Source
 
-  #   strategy:
-  #     matrix:
-  #       python: [3.8, 3.9]
+    strategy:
+      matrix:
+        python: [3.8, 3.9]
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         submodules: true
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
 
-  #     - name: Install dependencies
-  #       run: |
-  #         brew install python@${{ matrix.python }} sdl2 libusb
-  #         brew link --overwrite python@${{ matrix.python }}
-  #         pip3 install cmake ninja wheel
+      - name: Install dependencies
+        run: |
+          brew install python@${{ matrix.python }} pcl
+          brew link --overwrite python@${{ matrix.python }}
+          pip3 install cmake ninja wheel
       
-  #     - name: Build
-  #       run: python3 setup.py bdist_wheel
+      - name: Build
+        run: python3 setup.py bdist_wheel
       
-  #     - name: Upload Build Artifact
-  #       uses: actions/upload-artifact@v2.1.4
-  #       with:
-  #         name: macos-build
-  #         path: "dist/*.whl"
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2.1.4
+        with:
+          name: macos-build
+          path: "dist/*.whl"
 
   # Windows:
   #   runs-on: windows-2019
