--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -124,7 +124,7 @@ jobs:
   
   Publish:
     runs-on: ubuntu-20.04
-    needs: [Source, Linux] #, MacOS, Windows]
+    needs: [Source, Linux, MacOS]#, Windows]
     if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.guard == 'do-release' }}
 
     steps:    
@@ -154,11 +154,11 @@ jobs:
         
         python3 -m twine check source-build/*
         python3 -m twine check linux-build/*
-        # python3 -m twine check macos-build/*
+        python3 -m twine check macos-build/*
         # python3 -m twine check win-build/*
         
         python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} source-build/*
         python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} linux-build/*
-        # python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} macos-build/*
+        python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} macos-build/*
         # python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} win-build/*
 
