--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [ feature-python-bindings ]
+    branches: [ main ]
   pull_request:
-    branches: [ feature-python-bindings ]
+    branches: [ main ]
   workflow_dispatch:
     inputs:
       guard:
