--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -91,36 +91,36 @@ jobs:
           name: macos-build
           path: "dist/*.whl"
 
-  # Windows:
-  #   runs-on: windows-2019
-  #   needs: Source
+  Windows:
+    runs-on: windows-2019
+    needs: Source
 
-  #   strategy:
-  #     matrix:
-  #       python: [3.6, 3.7, 3.8, 3.9]
+    strategy:
+      matrix:
+        python: [3.6, 3.7, 3.8, 3.9]
 
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #       with:
-  #         submodules: true
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
       
-  #     - name: Set up Python ${{ matrix.python }}
-  #       uses: actions/setup-python@v2
-  #       with:
-  #         python-version: ${{ matrix.python }}
+      - name: Set up Python ${{ matrix.python }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python }}
 
-  #     - name: Install dependencies
-  #       run: |
-  #         pip install wheel
+      - name: Install dependencies
+        run: |
+          pip install wheel
 
-  #     - name: Build
-  #       run: python setup.py bdist_wheel
+      - name: Build
+        run: python setup.py bdist_wheel
       
-  #     - name: Upload Build Artifact
-  #       uses: actions/upload-artifact@v2.1.4
-  #       with:
-  #         name: win-build
-  #         path: "dist/*.whl"
+      - name: Upload Build Artifact
+        uses: actions/upload-artifact@v2.1.4
+        with:
+          name: win-build
+          path: "dist/*.whl"
   
   Publish:
     runs-on: ubuntu-20.04
@@ -155,10 +155,10 @@ jobs:
         python3 -m twine check source-build/*
         python3 -m twine check linux-build/*
         python3 -m twine check macos-build/*
-        # python3 -m twine check win-build/*
+        python3 -m twine check win-build/*
         
         python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} source-build/*
         python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} linux-build/*
         python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} macos-build/*
-        # python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} win-build/*
+        python3 -m twine upload --skip-existing --repository-url ${{ github.event.inputs.repository_url }} win-build/*
 
