--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -115,11 +115,14 @@ jobs:
 
       - name: Install boost
         uses: MarkusJx/install-boost@v1.0.1
+        id: install-boost
         with:
           boost_version: 1.73.0
 
       - name: Build
         run: python setup.py bdist_wheel
+        env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2.1.4
