--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -118,6 +118,7 @@ jobs:
         id: install-boost
         with:
           boost_version: 1.73.0
+          toolset: msvc14.2
 
       - name: Build
         run: python setup.py bdist_wheel
