CI, Windows: configure vcpkg

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -112,7 +112,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install wheel
-          vcpkg install eigen3
+          vcpkg install eigen3:x64-windows
 
       - name: Install boost
         uses: MarkusJx/install-boost@v1.0.1
@@ -125,6 +125,7 @@ jobs:
         run: python setup.py bdist_wheel
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+          CMAKE_TOOLCHAIN_FILE: "C:/vcpkg/scripts/buildsystems/vcpkg.cmake"
       
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v2.1.4
