--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,11 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 find_package(Boost 1.5 COMPONENTS system REQUIRED) # for optitrack
+add_definitions(
+  -DBOOST_DATE_TIME_NO_LIB
+  -DBOOST_REGEX_NO_LIB
+)
+
 find_package(Eigen3 REQUIRED)
 
 set(VICON_SDK_DIR ${CMAKE_CURRENT_SOURCE_DIR}/externalDependencies/vicon-datastream-sdk/)
