--- a/.gitmodules
+++ b/.gitmodules
@@ -1,16 +1,16 @@
 [submodule "externalDependencies/vicon-datastream-sdk"]
-	path = externalDependencies/vicon-datastream-sdk
+	path = deps/vicon-datastream-sdk
 	url = https://github.com/whoenig/vicon-datastream-sdk.git
 [submodule "externalDependencies/qualisys_cpp_sdk"]
-	path = externalDependencies/qualisys_cpp_sdk
+	path = deps/qualisys_cpp_sdk
 	url = https://github.com/qualisys/qualisys_cpp_sdk.git
 	shallow = true
 [submodule "externalDependencies/pybind11"]
-	path = externalDependencies/pybind11
+	path = deps/pybind11
 	url = https://github.com/pybind/pybind11.git
 [submodule "externalDependencies/vrpn"]
-	path = externalDependencies/vrpn
+	path = deps/vrpn
 	url = https://github.com/vrpn/vrpn.git
 [submodule "externalDependencies/NatNetSDKCrossplatform"]
-	path = externalDependencies/NatNetSDKCrossplatform
+	path = deps/NatNetSDKCrossplatform
 	url = https://github.com/whoenig/NatNetSDKCrossplatform.git
