--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md LICENSE version
-recursive-include externalDependencies *
+recursive-include deps *
 graft src
 graft examples
 graft include/libmotioncapture
