--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -64,7 +64,7 @@ jobs:
         path: "dist/*.whl"
   
   MacOS:
-    runs-on: macos-10.15
+    runs-on: macos-latest
     needs: Source
 
     strategy:
