CI: add eigen, boost dependency to Mac

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -92,7 +92,9 @@ jobs:
           python-version: ${{ matrix.python }}
 
       - name: Install dependencies
-        run: pip install cmake ninja wheel
+        run: |
+          brew install eigen boost
+          pip install cmake ninja wheel
 
       - name: Build
         run: python setup.py bdist_wheel
