--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,15 +8,6 @@ on:
   schedule:
     # Weekly build to make sure dependencies are OK
     - cron:  '30 14 * * 3'
-  workflow_dispatch:
-    inputs:
-      guard:
-        description: 'Do not run manually. Run "publish" to publish on Pypi'
-        required: true
-      repository_url:
-        description: 'URL of the pypi repository to upload to'
-        required: true
-        default: 'https://test.pypi.org/legacy/'
 
 jobs:
   Source:
@@ -155,14 +146,13 @@ jobs:
     permissions:
       id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
     needs: [Source, Linux, MacOS, Windows]
-    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.guard == 'do-release' }}
-
-    # In the future we may want to switch to a basic tag check instead
-    # if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-
+    # Only run publish if we have tagged the version
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
     steps:
+    # download all the artifacts to the dist folder
     - uses: actions/download-artifact@v3
-
+      with:
+        path: dist
     - uses: actions/setup-python@v4
       with:
         python-version: '3.8'
@@ -175,9 +165,6 @@ jobs:
         export TAG=$(echo ${{ github.ref }} | cut -d/ -f3)
         python3 -m wheel_inspect *-build/*.whl | jq .version | grep ^\\\"$TAG\\\"$
 
-
     - name: Publish on Pypi
       if: ${{ github.event_name == 'workflow_dispatch' }}
       uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: ${{ github.event.inputs.repository_url }}
