--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -173,7 +173,7 @@ jobs:
         pip3 install wheel-inspect
 
         export TAG=$(echo ${{ github.ref }} | cut -d/ -f3)
-        python3 -m wheel_inspect *-build/*.whl | jq .version | grep ^\\\"$TAG\\\"$
+        python3 -m wheel_inspect dist/*.whl | jq .version | grep ^\\\"$TAG\\\"$
 
     - name: Publish on Pypi
       if: ${{ github.event_name == 'workflow_dispatch' }}
